@@ -100,7 +100,7 @@ extern void PrintUseList(void);
 extern void ClearUseList(void);
 
 
-extern void CompressLine(char *TokNam, Byte Num, char *Line);
+extern void CompressLine(char *TokNam, Byte Num, char *Line, Boolean CompressLine);
 
 extern void ExpandLine(char *TokNam, Byte Num, char *Line);
 
